[package]
name = "analysis-sample-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
env_logger = "0.11.2"
indicatif = "0.17.8"
log = "0.4.20"

[profile.dev]
# devビルドでenv_loggerを有効にする
env_logger = "on"

[profile.release]
# releaseビルドでenv_loggerを無効にする
env_logger = "off"
